# SpaghetEngine

./: CMakeLists.txt
src/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
